detail page, dark theme

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,5 +16,10 @@
             "ok": "OK",
             "cancel": "Cancel"
         }
+    },
+    "detail": {
+        "dialog": {
+            "close": "Close"
+        }
     }
 }
