--- a/public/locales/sk/translation.json
+++ b/public/locales/sk/translation.json
@@ -16,5 +16,10 @@
             "ok": "OK",
             "cancel": "Zrušiť"
         }
+    },
+    "detail": {
+        "dialog": {
+            "close": "Zatvoriť"
+        }
     }
 }
